# polinjectum

./: .gitignore  LICENSE  README.md  pyproject.toml
src/polinjectum/: __init__.py  decorators.py  exceptions.py  lifecycle.py  polinjectum_container.py
tests/: test_container.py  test_decorators.py  test_exceptions.py
