[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polinjectum"
version = "0.1.0"
description = "A lightweight inversion of control through dependency injection framework for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["dependency-injection", "di", "ioc", "container"]
authors = [
    {name = "Orlando Ernesto Abreu Cruz", email = "orlye.ac@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/orlyeac/polinjectum"
Documentation = "https://github.com/orlyeac/polinjectum#readme"
Repository = "https://github.com/orlyeac/polinjectum"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["polinjectum"]
